Update with Project photo and Video

--- a/index.html
+++ b/index.html
@@ -110,27 +110,19 @@
         <div class="projects-grid">
             <div class="glass-card project-card" data-project="0">
                 <h3 style="color: var(--primary);">2DHappyTravel</h3>
-                <p style="color: var(--text-secondary);">A 2D side-scrolling game with platforming elements and battle system</p>
+                <p style="color: var(--text-secondary);">2D side-scrolling game with platforming elements and battle system</p>
             </div>
             <div class="glass-card project-card" data-project="1">
-                <h3 style="color: var(--secondary);">Quantum UI</h3>
-                <p style="color: var(--text-secondary);">Experimental interface system inspired by quantum computing principles</p>
+                <h3 style="color: var(--secondary);">ReelSteel</h3>
+                <p style="color: var(--text-secondary);">Realistic VR boxing game</p>
             </div>
             <div class="glass-card project-card" data-project="2">
-                <h3 style="color: var(--accent);">Cyber Portal</h3>
-                <p style="color: var(--text-secondary);">Immersive web experience with advanced WebGL and Three.js effects</p>
+                <h3 style="color: var(--accent);">MealTheory</h3>
+                <p style="color: var(--text-secondary);">3D cooking simulator base on real food recipe</p>
             </div>
             <div class="glass-card project-card" data-project="3">
-                <h3 style="color: var(--primary);">Data Stream</h3>
-                <p style="color: var(--text-secondary);">Live data visualization platform with real-time streaming capabilities</p>
-            </div>
-            <div class="glass-card project-card" data-project="4">
-                <h3 style="color: var(--secondary);">Neon Grid</h3>
-                <p style="color: var(--text-secondary);">Cyberpunk-themed design system with glowing components and animations</p>
-            </div>
-            <div class="glass-card project-card" data-project="5">
-                <h3 style="color: var(--accent);">Matrix View</h3>
-                <p style="color: var(--text-secondary);">3D data exploration tool with virtual reality integration support</p>
+                <h3 style="color: var(--primary);">TheGrind</h3>
+                <p style="color: var(--text-secondary);">A Job-search website with different roles</p>
             </div>
         </div>
     </section>
@@ -216,15 +208,6 @@
             </div>
             <div class="skill-node">
                 <span>Typescript</span>
-            </div>
-        </div>
-    </section>
-
-    <section id="skills" class="fade-in">
-        <h2 class="section-title">SOFT SKILLS</h2>
-        <div class="skills-container">
-            <div class="skill-node">
-                <span>Team work</span>
             </div>
         </div>
     </section>
